# oO.Oo

./: Cargo.toml  readme.md
src/: cam.rs  main.rs  mylight.rs  player.rs  spawner.rs
src/spawner/: palette.rs
